--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -36,20 +36,24 @@
                     android:orientation="horizontal">
 
                     <Space
-                        android:layout_width="13dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
 
                     <LinearLayout
                         android:layout_width="143dp"
                         android:layout_height="match_parent"
+                        android:background="@drawable/layout_border"
                         android:orientation="vertical">
 
-                        <ImageView
-                            android:id="@+id/imageView8"
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/img_profile"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@mipmap/ic_usuari_round" />
+                            android:layout_height="74dp"
+                            android:baselineAlignBottom="false"
+                            android:clickable="false"
+                            android:onClick="onClick"
+                            app:srcCompat="@mipmap/ic_usuari_foreground" />
 
                         <EditText
                             android:id="@+id/etxt_newname"
@@ -58,39 +62,15 @@
                             android:ems="10"
                             android:fontFamily="serif-monospace"
                             android:gravity="center"
-                            android:inputType="textPersonName"
-                            android:text="Manolo Lama" />
+                            android:hint="New Name"
+                            android:inputType="textPersonName" />
 
-                    </LinearLayout>
-
-                    <Space
-                        android:layout_width="24dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0" />
-
-                    <LinearLayout
-                        android:layout_width="143dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0"
-                        android:orientation="vertical">
-
-                        <Space
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0" />
-
-                        <Button
-                            android:id="@+id/btn_newimage"
-                            android:layout_width="match_parent"
-                            android:layout_height="108dp"
-                            android:layout_weight="0"
-                            android:text="@string/new_profile_image" />
                     </LinearLayout>
 
                     <Space
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0" />
+                        android:layout_weight="1" />
 
                 </LinearLayout>
 
@@ -100,9 +80,9 @@
                     android:orientation="horizontal">
 
                     <Space
-                        android:layout_width="11dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="0" />
+                        android:layout_weight="1" />
 
                     <EditText
                         android:id="@+id/txt_newdescrip"
@@ -111,7 +91,9 @@
                         android:layout_weight="0"
                         android:ems="10"
                         android:hint="@string/new_profile_description"
-                        android:inputType="textPersonName" />
+                        android:textAlignment="center"
+                        android:inputType="textPersonName"
+                        android:gravity="center_horizontal" />
 
                     <Space
                         android:layout_width="match_parent"
@@ -130,140 +112,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="8dp" />
 
-                <LinearLayout
-                    android:id="@+id/lay_mypref"
-                    android:layout_width="match_parent"
-                    android:layout_height="172dp"
-                    android:orientation="vertical">
-
-                    <ScrollView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <Space
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1" />
-
-                            <TextView
-                                android:id="@+id/txt_addpref"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fitsSystemWindows="false"
-                                android:fontFamily="serif-monospace"
-                                android:gravity="center"
-                                android:text="@string/add_preference"
-                                android:textSize="24sp"
-                                android:textStyle="bold" />
-
-                            <Space
-                                android:layout_width="10dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="0" />
-
-                            <TextView
-                                android:id="@+id/txt_prefdel"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="serif-monospace"
-                                android:gravity="center"
-                                android:text="@string/delete_preference"
-                                android:textSize="24sp"
-                                android:textStyle="bold" />
-
-                            <Space
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1" />
-
-                        </LinearLayout>
-                    </ScrollView>
-
-                    <Space
-                        android:layout_width="match_parent"
-                        android:layout_height="8dp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <Space
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
-
-                        <View
-                            android:id="@+id/divider6"
-                            android:layout_width="297dp"
-                            android:layout_height="2dp"
-                            android:background="@drawable/btn_event_button" />
-
-                        <Space
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
-                    </LinearLayout>
-
-                    <Space
-                        android:layout_width="match_parent"
-                        android:layout_height="8dp" />
-
-                    <ScrollView
-                        android:layout_width="match_parent"
-                        android:layout_height="118dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:id="@+id/imageView9"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0"
-                                app:srcCompat="@mipmap/ic_football_foreground" />
-
-                            <View
-                                android:id="@+id/divider3"
-                                android:layout_width="3dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="0"
-                                android:background="@drawable/layout_border" />
-
-                            <ImageView
-                                android:id="@+id/imageView10"
-                                android:layout_width="141dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="0"
-                                app:srcCompat="@mipmap/ic_basket_foreground" />
-
-                            <View
-                                android:id="@+id/divider5"
-                                android:layout_width="3dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="0"
-                                android:background="@drawable/layout_border" />
-
-                            <ImageView
-                                android:id="@+id/imageView11"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="0"
-                                app:srcCompat="@mipmap/ic_tennis_foreground" />
-                        </LinearLayout>
-                    </ScrollView>
-
-                </LinearLayout>
-
                 <Space
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -281,7 +129,7 @@
                 <LinearLayout
                     android:id="@+id/lay_myevents"
                     android:layout_width="match_parent"
-                    android:layout_height="132dp"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <TextView
@@ -295,33 +143,32 @@
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="96dp">
+                        android:layout_height="wrap_content">
 
                         <Button
                             android:id="@+id/btn_changeemail"
                             android:layout_width="160dp"
                             android:layout_height="49dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginLeft="8dp"
+                            android:layout_marginTop="32dp"
                             android:background="@drawable/bnt_profile"
                             android:text="EMAIL"
-                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/btn_changepassword"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.68" />
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <Button
                             android:id="@+id/btn_changepassword"
-                            android:layout_width="140dp"
-                            android:layout_height="49dp"
-                            android:layout_marginStart="40dp"
-                            android:layout_marginLeft="40dp"
+                            android:layout_width="160dp"
+                            android:layout_height="52dp"
+                            android:layout_marginTop="24dp"
+                            android:layout_marginBottom="32dp"
                             android:background="@drawable/bnt_profile"
                             android:text="PASSWORD"
-                            app:layout_constraintBottom_toBottomOf="@+id/btn_changeemail"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.498"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="@+id/btn_changeemail" />
+                            app:layout_constraintTop_toBottomOf="@+id/btn_changeemail" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </LinearLayout>
@@ -338,7 +185,8 @@
 
                 <Space
                     android:layout_width="match_parent"
-                    android:layout_height="5dp" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
 
                 <Button
                     android:id="@+id/btn_validate2"
