--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -27,6 +27,7 @@
                 android:id="@+id/lay_myprof"
                 android:layout_width="match_parent"
                 android:layout_height="122dp"
+                android:background="@android:color/transparent"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -34,19 +35,17 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/imageView8"
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/img_profile"
                         android:layout_width="match_parent"
-                        android:layout_height="85dp"
-                        app:srcCompat="@mipmap/ic_usuari_round" />
+                        android:layout_height="85dp" />
 
                     <TextView
-                        android:id="@+id/txt_name2"
+                        android:id="@+id/txt_nameprofile"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="monospace"
                         android:gravity="center"
-                        android:text="Manolo Lama"
                         android:textSize="18sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -71,12 +70,11 @@
                                 android:layout_height="16dp" />
 
                             <TextView
-                                android:id="@+id/txt_nfollowers2"
+                                android:id="@+id/txt_nfollowers"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="serif-monospace"
                                 android:gravity="center"
-                                android:text="321"
                                 android:textSize="24sp"
                                 android:textStyle="bold" />
 
@@ -102,12 +100,11 @@
                                 android:layout_height="16dp" />
 
                             <TextView
-                                android:id="@+id/textView7"
+                                android:id="@+id/txt_nfollowing"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="serif-monospace"
                                 android:gravity="center"
-                                android:text="320"
                                 android:textSize="24sp"
                                 android:textStyle="bold" />
 
@@ -172,7 +169,6 @@
                     android:layout_height="match_parent"
                     android:fontFamily="serif-monospace"
                     android:gravity="center|start"
-                    android:text="Genio, figura, maquina, heroe, crack, mostro, ninja, bestia, titán, campeón, jefe, caza de combate, truhan, zeus, robocop, chulazo, socio."
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -188,106 +184,9 @@
                 android:layout_height="4dp"
                 android:background="@drawable/layout_border" />
 
-            <LinearLayout
-                android:id="@+id/lay_mypref"
-                android:layout_width="match_parent"
-                android:layout_height="153dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="51dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/txt_description"
-                        android:layout_width="194dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
-                        android:fontFamily="serif-monospace"
-                        android:gravity="center|left"
-                        android:text="@string/preferences"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        android:orientation="vertical">
-
-                        <Space
-                            android:layout_width="match_parent"
-                            android:layout_height="12dp"
-                            android:layout_weight="1" />
-
-                        <ImageView
-                            android:id="@+id/imageView13"
-                            android:layout_width="19dp"
-                            android:layout_height="26dp"
-                            app:srcCompat="@drawable/outline_star_border_black_48" />
-
-                        <Space
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="83dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/imageView9"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        app:srcCompat="@mipmap/ic_football_foreground" />
-
-                    <View
-                        android:id="@+id/divider3"
-                        android:layout_width="3dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0"
-                        android:background="@drawable/layout_border" />
-
-                    <ImageView
-                        android:id="@+id/imageView10"
-                        android:layout_width="141dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0"
-                        app:srcCompat="@mipmap/ic_basket_foreground" />
-
-                    <View
-                        android:id="@+id/divider5"
-                        android:layout_width="3dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0"
-                        android:background="@drawable/layout_border" />
-
-                    <ImageView
-                        android:id="@+id/imageView11"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        app:srcCompat="@mipmap/ic_tennis_foreground" />
-                </LinearLayout>
-
-            </LinearLayout>
-
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-
-            <View
-                android:id="@+id/divider2"
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@drawable/layout_border" />
 
             <Space
                 android:layout_width="match_parent"
@@ -314,6 +213,7 @@
                     android:layout_height="match_parent">
 
                     <LinearLayout
+                        android:id="@+id/layout_myevents"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical" />
