--- a/app/src/main/res/layout/activity_profile_other.xml
+++ b/app/src/main/res/layout/activity_profile_other.xml
@@ -35,13 +35,13 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/imageView8"
+                        android:id="@+id/img_profile"
                         android:layout_width="match_parent"
                         android:layout_height="85dp"
-                        app:srcCompat="@mipmap/ic_usuari_round" />
+                        app:srcCompat="@mipmap/ic_usuari_foreground" />
 
                     <TextView
-                        android:id="@+id/txt_name2"
+                        android:id="@+id/txt_nameprofile"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="monospace"
@@ -71,7 +71,7 @@
                                 android:layout_height="16dp" />
 
                             <TextView
-                                android:id="@+id/txt_nfollowers2"
+                                android:id="@+id/txt_nfollowers"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="serif-monospace"
@@ -102,7 +102,7 @@
                                 android:layout_height="16dp" />
 
                             <TextView
-                                android:id="@+id/textView7"
+                                android:id="@+id/txt_nfollowing"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="serif-monospace"
@@ -188,107 +188,9 @@
                 android:layout_height="4dp"
                 android:background="@drawable/layout_border" />
 
-            <LinearLayout
-                android:id="@+id/lay_mypref"
-                android:layout_width="match_parent"
-                android:layout_height="153dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="51dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/txt_description"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
-                        android:fontFamily="serif-monospace"
-                        android:gravity="center|left"
-                        android:text="@string/preferences"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        android:orientation="vertical">
-
-                        <Space
-                            android:layout_width="match_parent"
-                            android:layout_height="12dp"
-                            android:layout_weight="1" />
-
-                        <ImageView
-                            android:id="@+id/imageView13"
-                            android:layout_width="19dp"
-                            android:layout_height="26dp"
-                            android:layout_marginLeft="5dp"
-                            app:srcCompat="@drawable/outline_star_border_black_48" />
-
-                        <Space
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="83dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/imageView9"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        app:srcCompat="@mipmap/ic_football_foreground" />
-
-                    <View
-                        android:id="@+id/divider3"
-                        android:layout_width="3dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0"
-                        android:background="@drawable/layout_border" />
-
-                    <ImageView
-                        android:id="@+id/imageView10"
-                        android:layout_width="141dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0"
-                        app:srcCompat="@mipmap/ic_basket_foreground" />
-
-                    <View
-                        android:id="@+id/divider5"
-                        android:layout_width="3dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0"
-                        android:background="@drawable/layout_border" />
-
-                    <ImageView
-                        android:id="@+id/imageView11"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        app:srcCompat="@mipmap/ic_tennis_foreground" />
-                </LinearLayout>
-
-            </LinearLayout>
-
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-
-            <View
-                android:id="@+id/divider2"
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@drawable/layout_border" />
 
             <Space
                 android:layout_width="match_parent"
